# apigent

./: .env.example  .gitignore  AWS_Shield_Protection_Analysis.md  AmazonQ.md  DMS_Performance_Optimization_Guide.md  README.md  STREAMING_API.md  compile_translations.sh  main.py  pyproject.toml  test.py  test_stream.py
app/models/: category.py  chat.py  datetime.py  field.py  tool.py  tool_embedding.py
app/routers/: category.py  chat.py  chat_history.py  chat_session.py  field.py  pages.py  tool.py
app/translations/ar/LC_MESSAGES/: messages.po
app/translations/en/LC_MESSAGES/: messages.po
app/translations/zh/LC_MESSAGES/: messages.po
app/utils/: ai.py  code_to_image.py  generate_code_image.py  i18n.py  pg.py  preproccess.py  retrieve.py
pages/: categories.html  chat-histories.html  chat-sessions.html  chatbox-stream.html  chatbox.html  fields.html  index.html  layout.html  manage-api.html  tools.html
sql/: chat-history.sql  meta.sql
static/js/: alert.js  confirm.js  http.js
test/: api.rest
